--- a/modules/ROOT/pages/tools/neo4j-admin/neo4j-admin-import.adoc
+++ b/modules/ROOT/pages/tools/neo4j-admin/neo4j-admin-import.adoc
@@ -91,7 +91,7 @@ neo4j-admin database import full [-h] [--expand-commands] [--verbose] [--auto-sk
                                  [=true|false]] [--additional-config=<file>] [--array-delimiter=<char>]
                                  [--bad-tolerance=<num>] [--delimiter=<char>] [--format=<format>]
                                  [--high-parallel-io=on|off|auto] [--id-type=string|integer|actual]
-                                 [--input-encoding=<character-set>] [--input-type[=csv\|parquet]]
+                                 [--input-encoding=<character-set>] [--input-type[=csv|parquet]]
                                  [--max-off-heap-memory=<size>] [--quote=<char>] [--read-buffer-size=<size>]
                                  [--report-file=<path>] [--schema=<path>] [--threads=<num>]
                                  --nodes=[<label>[:<label>]...=]<files>... [--nodes=[<label>[:<label>]...=]
@@ -612,10 +612,11 @@ neo4j-admin database import incremental [-h] [--expand-commands] --force [--verb
                                         [--additional-config=<file>] [--array-delimiter=<char>] [--bad-tolerance=<num>]
                                         [--delimiter=<char>] [--high-parallel-io=on|off|auto]
                                         [--id-type=string|integer|actual] [--input-encoding=<character-set>]
-                                        [--max-off-heap-memory=<size>] [--quote=<char>] [--read-buffer-size=<size>]
-                                        [--report-file=<path>] [--schema=<path>] [--stage=all|prepare|build|merge]
-                                        [--threads=<num>] --nodes=[<label>[:<label>]...=]<files>... [--nodes=[<label>
-                                        [:<label>]...=]<files>...]... [--relationships=[<type>=]<files>...]... <database>
+                                        [--input-type[=csv|parquet]] [--max-off-heap-memory=<size>]
+                                        [--quote=<char>] [--read-buffer-size=<size>] [--report-file=<path>]
+                                        [--stage=all|prepare|build|merge] [--threads=<num>]
+                                        --nodes=[<label>[:<label>]...=]<files>... [--nodes=[<label>[:<label>]...=]
+                                        <files>...]... [--relationships=[<type>=]<files>...]... <database>
 ----
 
 === Description
